Updated status-web HTML

--- a/status-web/templates/index.html
+++ b/status-web/templates/index.html
@@ -7,5 +7,7 @@
   <body>
     <h1>Status Web Placeholder</h1>
     <p>If you can see this page, your status-web container is working.</p>
+    <p>Deployment test successful!</p>
+
   </body>
 </html>
